infrastructure/monitoring/config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: prometheus${INGRESS_SUFFIX}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
  tls:
  - secretName: prometheus-tls
    hosts:
    - prometheus${INGRESS_SUFFIX}
